zero the margin

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>Wave on a string</title>
+    <style type="text/css" media="screen">
+      body {margin:0;padding:0}
+    </style>
     <script type="text/javascript" src="elm.js"></script>
   </head>
   <body>
